# compact-time

./: .gitmodules  .markdownlint.json  LICENSE-SPEC.md  LICENSE.md  README.md  compact-date-specification.md  compact-time-specification.md
reference-implementation/: README.md  meson.build
reference-implementation/include/cdate/: cdate.h
reference-implementation/include/compact_time/: compact_time.h
reference-implementation/src/: library.c
reference-implementation/subprojects/: endianness  kslog  vlq
reference-implementation/tests/src/: library.cpp  readme_examples_test.cpp
